Test to fix deployment updates not showing

--- a/style.css
+++ b/style.css
@@ -11,4 +11,5 @@
 
 ul {
     list-style: none;
+    list-style-type: none;
 }
